--- a/Bundles/view.omnioutlinerjs/Resources/en.lproj/focusSelection.strings
+++ b/Bundles/view.omnioutlinerjs/Resources/en.lproj/focusSelection.strings
@@ -1,4 +1,4 @@
-"label" = "Focus on Selection";
+"label" = "Focus";
 "shortLabel" = "Focus";
-"mediumLabel" = "Focus Selection";
+"mediumLabel" = "Focus";
 "LongLabel" = "Focus on selected rows";
