Fix bug on column selection

--- a/share.omnioutlinerjs/Resources/en.lproj/shareTopic.strings
+++ b/share.omnioutlinerjs/Resources/en.lproj/shareTopic.strings
@@ -1,4 +1,4 @@
-"label" = "Share Item";
-"shortLabel" = "Item";
+"label" = "Share Topic";
+"shortLabel" = "Share Topic";
 "mediumLabel" = "Share Item Topic";
-"LongLabel" = "Share the Topic column texts from selected items";
+"LongLabel" = "Share the Topic column texts from selected rows";
