--- a/format.omnioutlinerjs/Resources/en.lproj/lineSpacing.strings
+++ b/format.omnioutlinerjs/Resources/en.lproj/lineSpacing.strings
@@ -1,4 +1,4 @@
 "label" = "Line Spacing";
 "shortLabel" = "Line Spacing";
 "mediumLabel" = "Line Spacing";
-"LongLabel" = "Set base style line spacing";
+"LongLabel" = "Set line spacing for selected rows";
