--- a/format.omnioutlinerjs/Resources/en.lproj/splitColumn.strings
+++ b/format.omnioutlinerjs/Resources/en.lproj/splitColumn.strings
@@ -1,4 +1,4 @@
 "label" = "Split Column";
 "shortLabel" = "Split Column";
-"mediumLabel" = "Split column";
+"mediumLabel" = "Split Column";
 "LongLabel" = "Split paragraphs of selected column into separate rows";
