--- a/edit.omnioutlinerjs/Resources/en.lproj/copyAsLink.strings
+++ b/edit.omnioutlinerjs/Resources/en.lproj/copyAsLink.strings
@@ -1,4 +1,4 @@
 "label" = "Copy as Link";
 "shortLabel" = "Copy Link";
 "mediumLabel" = "Copy Link";
-"LongLabel" = "Copy the links from selected rows";
+"LongLabel" = "Copy links from selected rows";
